// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DraggableSectionContent snapshots > should render DraggableSectionContent 1`] = `
<DocumentFragment>
  <div
    style="width: 100%;"
  />
  <div
    class="DraggableSectionContent"
  >
    <div
      class="ButtonIcon"
      data-test-button-icon="toggle-visibility"
      data-test-tooltip=""
    >
      <div
        class="Icon Icon--neutral-1"
        data-test-icon="eyes-opened"
        height="14"
        name="EyesOpened"
        width="14"
      />
    </div>
    <div
      class="Tooltip"
    >
      <div
        class="Tooltip__content"
      >
        Hide
        <div
          class="Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
          data-test-icon="carrot-down"
          height="14"
          name="CarrotDown"
          width="10"
        />
      </div>
    </div>
    <div
      class="ButtonIcon"
      data-test-button-icon="remove"
      data-test-tooltip=""
    >
      <div
        class="Icon Icon--neutral-1"
        data-test-icon="minus"
        height="14"
        name="Minus"
        width="14"
      />
    </div>
    <div
      class="Tooltip"
    >
      <div
        class="Tooltip__content"
      >
        Remove
        <div
          class="Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
          data-test-icon="carrot-down"
          height="14"
          name="CarrotDown"
          width="10"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DraggableSectionContent snapshots > should render when is not visible param 1`] = `
<DocumentFragment>
  <div
    style="width: 100%;"
  />
  <div
    class="DraggableSectionContent"
  >
    <div
      class="ButtonIcon"
      data-test-button-icon="toggle-visibility"
      data-test-tooltip=""
    >
      <div
        class="Icon Icon--neutral-1"
        data-test-icon="eyes-closed"
        height="14"
        name="EyesClosed"
        width="14"
      />
    </div>
    <div
      class="Tooltip"
    >
      <div
        class="Tooltip__content"
      >
        Show
        <div
          class="Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
          data-test-icon="carrot-down"
          height="14"
          name="CarrotDown"
          width="10"
        />
      </div>
    </div>
    <div
      class="ButtonIcon"
      data-test-button-icon="remove"
      data-test-tooltip=""
    >
      <div
        class="Icon Icon--neutral-1"
        data-test-icon="minus"
        height="14"
        name="Minus"
        width="14"
      />
    </div>
    <div
      class="Tooltip"
    >
      <div
        class="Tooltip__content"
      >
        Remove
        <div
          class="Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
          data-test-icon="carrot-down"
          height="14"
          name="CarrotDown"
          width="10"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
